# whatif-freight-router

./: .env.example  .gitattributes  .gitignore  README.md  docker-compose.yml  project-dump.txt
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: _process_cache.py  abstention.py  audit_correction.py  calibration_loader.py  candidate_bounds.py  candidate_criticality.py  carbon_model.py  certificate_witness.py  certification_cache.py  certification_models.py  certified_set.py  confidence_sequences.py  decision_critical.py  decision_region.py  departure_profile.py  evidence_certification.py  experiment_store.py  fallback_store.py  fidelity_model.py  flip_radius.py  fuel_energy_model.py  gradient.py  incident_simulator.py  k_raw_cache.py  k_shortest.py  live_call_trace.py  live_data_sources.py  logging_utils.py  main.py  metrics_store.py  model_data_errors.py  models.py  multileg_engine.py  objectives_emissions.py  objectives_selection.py  oracle_quality_store.py  pairwise_gap_model.py  pareto.py  pareto_methods.py  preference_model.py  (+30 more)
backend/scripts/: __init__.py  benchmark_batch_pareto.py  benchmark_model_v2.py  benchmark_route_graph_warmup.py  build_departure_profiles_uk.py  build_model_assets.py  build_od_corpus_uk.py  build_pricing_tables_uk.py  build_route_graph_subset.py  build_routing_graph_uk.py  build_scenario_profiles_uk.py  build_stochastic_calibration_uk.py  build_terrain_tiles_uk.py  check_eta_concept_drift.py  collect_carbon_intensity_raw_uk.py  collect_dft_raw_counts_uk.py  collect_fuel_history_raw_uk.py  collect_toll_truth_raw_uk.py  (+32 more)
(+811 files in other folders)
