[project]
name = "freight-router-backend"
version = "0.2.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.110,<1.0",
  "uvicorn[standard]>=0.27,<1.0",
  "httpx>=0.27,<1.0",
  "pydantic>=2.7,<3.0",
  "pydantic-settings>=2.2,<3.0",
  "python-json-logger>=2.0,<3.0",
  "numpy>=2.1,<3.0",
  "scipy>=1.14,<2.0",
  "pandas>=2.2,<3.0",
  "networkx>=3.3,<4.0",
  "rasterio>=1.4,<2.0",
  "shapely>=2.0,<3.0",
  "pyproj>=3.7,<4.0",
  "rtree>=1.3,<2.0",
  "osmium>=3.7,<5.0",
  "ijson>=3.3,<4.0",
]

[dependency-groups]
dev = [
  "pytest>=8.0,<9.0",
  "ruff>=0.4,<1.0",
  "pytest-benchmark>=5.1,<6.0",
  "statsmodels>=0.14,<1.0",
  "properscoring>=0.1,<1.0",
]

[tool.ruff]
line-length = 100
extend-exclude = ["out"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
